--- a/exercicio20.html
+++ b/exercicio20.html
@@ -18,7 +18,7 @@ for (let i = 0; i < quantidadeAlunos; i++) {
 
 
     for (let j = 0; j < 4; j++) {
-        let nota = parseFloat(prompt("Digite a nota " + (j + 1) + " do aluno " + aluno + ":"));
+        let nota = parseFloat(prompt("Digite a nota de 0 a 10 " + (j + 1) + " do aluno " + aluno + ":"));
         somaNotas += nota;
     }
 
